feat!: refactor application architecture and add AI features